--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -23,10 +23,11 @@
   		<param-value>false</param-value>
  	</context-param>
 
- 	<context-param>
+<!-- 	<context-param>
  		<param-name>cassandra-keyspace</param-name>
   		<param-value>ERS</param-value>
  	</context-param>
+-->
 
   <listener>
     <listener-class>edu.kit.aifb.cumulus.webapp.Listener</listener-class>
