--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ branches:
   only:
     - develop
 
+before_install:
+ - sudo apt-get install -qq avahi-utils
+
 install: 
     - pip install -r requirements.txt --use-mirrors
     - python setup.py install
