--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,7 @@ install:
     - pip install -r requirements.txt --use-mirrors
     - python setup.py install
 
+before_script:
+    - curl -X PUT http://127.0.0.1:5984/_config/admins/admin -d '"admin"'
+
 script: python tests/ers_test.py
