--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <display-name>CumulusRDF Store</display-name>
+  <display-name>Entity Registry System</display-name>
 <!--
   <context-param>
     <param-name>config-file</param-name>
     <param-value>/etc/cumulus.yaml</param-value>
   </context-param>
 -->
+	<!-- this value is used whenever neither Embedded nor Openshift is chosen -->
   	<context-param> 
  		<param-name>cassandra-hosts</param-name>
   		<param-value>134.21.73.204:9160</param-value>  
 	</context-param>
 
+	<!-- NOTE: just one of the two following parameters can be set true !! not both in the same time -->
 	<context-param>	
 		<param-name>start-embedded</param-name> 
-		<param-value>yes</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
+		<param-value>no</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
 	</context-param>
+	<context-param>	
+		<param-name>run-on-openshift</param-name> 
+		<param-value>no</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
+	</context-param>
+	<!-- -->
 
+	<!-- this is used of start-embedded is set to 'yes' -->
 	<context-param>	
 		<param-name>cassandra-embedded-host</param-name>
 -		<param-value>127.0.0.1:9171</param-value> 
@@ -32,12 +40,13 @@
   		<param-value>false</param-value>
  	</context-param>
 
-	<!-- IF embedded version is selected, this would be inforced to be 1; so it does not matter what's there if embedded is on -->
+	<!-- IF embedded or Openshift version is selected, this would be inforced to be 1; -->
 	<context-param>	
 		<param-name>default-replication-factor</param-name>
 		<param-value>2</param-value>
 	</context-param>
 
+	<!-- to easily recognize the ERS' keyspaces, all of them are prepended by this prefix -->
  	<context-param>
  		<param-name>ers-keyspaces-prefix</param-name>
   		<param-value>ERS_</param-value>
