--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 	<!-- NOTE: just one of the two following parameters can be set true !! not both in the same time -->
 	<context-param>	
 		<param-name>start-embedded</param-name> 
-		<param-value>no</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
+		<param-value>yes</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
 	</context-param>
 	<context-param>	
 		<param-name>run-on-openshift</param-name> 
@@ -53,6 +53,20 @@
  		<param-name>ers-keyspaces-prefix</param-name>
   		<param-value>ERS_</param-value>
  	</context-param>
+
+   <!-- 1 = e; 2 = e+p; 3 = e+p+v; => 1 is course-grain and 3 is fine-grain locking -->
+   <!-- default value = 3 -->
+   <context-param>
+      <param-name>ers-transactional-locking-granularity</param-name>
+      <param-value>3</param-value>
+   </context-param>
+
+   <!-- if set to yes, any operation will also handle links  -->
+   <!-- default value: yes -->
+   <context-param>
+      <param-name>ers-create-links</param-name>
+      <param-value>yes</param-value>
+   </context-param>
 
   <listener>
     <listener-class>edu.kit.aifb.cumulus.webapp.Listener</listener-class>
