--- a/ers-global/pom.xml
+++ b/ers-global/pom.xml
@@ -6,10 +6,55 @@
   <version>1.1-SNAPSHOT</version>
   <name>ERS Global Server Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <packaging>war</packaging>  
+  <packaging>${packaging.type}</packaging>
   <properties>
     <tomcat.version>7.0.34</tomcat.version>
   </properties>
+
+  <profiles>
+    <profile>
+      <id>openshift</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <packaging.type>war</packaging.type>
+        <startup.openshift>yes</startup.openshift>
+        <startup.embedded>no</startup.embedded>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.cassandra</groupId>
+          <artifactId>apache-cassandra</artifactId>
+          <version>1.1.0</version>
+          <type>pom</type>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.cassandra</groupId>
+          <artifactId>cassandra-clientutil</artifactId>
+          <version>1.1.10</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.cassandra</groupId>
+          <artifactId>cassandra-thrift</artifactId>
+          <version>1.1.10</version>
+        </dependency>
+        <dependency>
+          <groupId>org.hectorclient</groupId>
+          <artifactId>hector-core</artifactId>
+          <version>1.1-1</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>embedded</id>
+      <properties>
+        <packaging.type>jar</packaging.type>
+        <startup.openshift>no</startup.openshift>
+        <startup.embedded>yes</startup.embedded>
+      </properties>
+    </profile>
+  </profiles>
 
   <repositories>
  	<repository>
@@ -122,35 +167,11 @@
         <version>${tomcat.version}</version>
     </dependency> 
 
-    <!-- add dependencies of cumulusRDF according to WEB-INF/lib/ dir and https://repository.sonatype.org/ 
--->
+    <!-- add dependencies of cumulusRDF according to WEB-INF/lib/ dir and https://repository.sonatype.org/ -->
     <dependency>
     	    <groupId>org.cassandraunit</groupId>
 	    <artifactId>cassandra-unit</artifactId>
 	    <version>1.1.1.2</version>
-    </dependency> 
-
-<!-- REMOVE this because of cassandra -unit -->
-    <dependency>
-  	<groupId>org.apache.cassandra</groupId>
-  	<artifactId>apache-cassandra</artifactId>
-  	<version>1.1.0</version>
-  	<type>pom</type>
-    </dependency>
-    <dependency>
-	  <groupId>org.apache.cassandra</groupId>
-	  <artifactId>cassandra-clientutil</artifactId>
-	  <version>1.1.10</version>
-    </dependency>
-    <dependency>
-	  <groupId>org.apache.cassandra</groupId>
-	  <artifactId>cassandra-thrift</artifactId>
-	  <version>1.1.10</version> 
-     </dependency>
-	<dependency>
-	  <groupId>org.hectorclient</groupId>
- 	  <artifactId>hector-core</artifactId>
-	  <version>1.1-1</version>
     </dependency>
 
     <dependency>
@@ -468,7 +489,6 @@
                 </execution>
             </executions>
         </plugin>
-
     </plugins>
   </build>
 </project>
