--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ install:
 before_script:
     - curl -X PUT http://127.0.0.1:5984/_config/admins/admin -d '"admin"'
 
-script: python tests/ers_test.py
+script: python tests/test_ers.py
