--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 	<!-- NOTE: just one of the two following parameters can be set true !! not both in the same time -->
 	<context-param>	
 		<param-name>start-embedded</param-name> 
-		<param-value>yes</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
+		<param-value>no</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
 	</context-param>
 	<context-param>	
 		<param-name>run-on-openshift</param-name> 
@@ -143,6 +143,10 @@
 	<servlet-name>exist_entity</servlet-name>
 	<servlet-class>edu.kit.aifb.cumulus.webapp.ExistEntityServlet</servlet-class>
   </servlet>
+  <servlet>
+	<servlet-name>last_sync_seq</servlet-name>
+	<servlet-class>edu.kit.aifb.cumulus.webapp.LastSyncSeqServlet</servlet-class>
+  </servlet>
 
 
   <servlet>
@@ -218,6 +222,10 @@
   <servlet-mapping>
     <servlet-name>transaction</servlet-name>
     <url-pattern>/transaction</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+	<servlet-name>last_sync_seq</servlet-name>
+    <url-pattern>/last_sync_seq</url-pattern>
   </servlet-mapping>
 
   <error-page>
