--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
     - develop
 
 before_install:
-    - sudo apt-get install -qq avahi-utils
+    - sudo apt-get install -qq avahi-utils python-avahi
 
 install: 
     - pip install -r requirements.txt --use-mirrors
