--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ branches:
 before_install:
 
 install:
-    - PYLIBDIR=`pip --version | grep -Po '(?<=from ).*(?=/(dist|site)-packages)'`; curl https://raw.github.com/ers-devs/ers-utils/master/xo_setup/site-packages.tar | tar --transform "s,^,$PYLIBDIR/," -x "site-packages/avahi/*"
+    - PYLIBDIR=`pip --version | grep -Po '(?<=from ).*(?=/(dist|site)-packages)'`; curl https://raw.github.com/ers-devs/ers-utils/master/xo_setup/site-packages.tar | tar --wildcards --transform "s,^,$PYLIBDIR/," -x "site-packages/avahi/*"
     - pip install -r requirements.txt --use-mirrors
     - python setup.py install
     - cd ers-global; mvn package -Dmaven.test.skip=true -f pom_embedded.xml; cd ..
