--- a/ers-global/pom.xml
+++ b/ers-global/pom.xml
@@ -26,23 +26,26 @@
         <dependency>
           <groupId>org.apache.cassandra</groupId>
           <artifactId>apache-cassandra</artifactId>
-          <version>1.1.0</version>
+<!--          <version>1.1.0</version>  -->
+          <version>1.2.8</version>
           <type>pom</type>
         </dependency>
         <dependency>
           <groupId>org.apache.cassandra</groupId>
           <artifactId>cassandra-clientutil</artifactId>
-          <version>1.1.10</version>
+          <!--<version>1.1.10</version>-->
+          <version>1.2.8</version>
         </dependency>
         <dependency>
           <groupId>org.apache.cassandra</groupId>
           <artifactId>cassandra-thrift</artifactId>
-          <version>1.1.10</version>
+          <!-- <version>1.1.10</version> -->
+          <version>1.2.8</version>
         </dependency>
         <dependency>
           <groupId>org.hectorclient</groupId>
           <artifactId>hector-core</artifactId>
-          <version>1.1-1</version>
+          <version>1.1-4</version>
         </dependency>
       </dependencies>
     </profile>
@@ -171,7 +174,8 @@
     <dependency>
     	    <groupId>org.cassandraunit</groupId>
 	    <artifactId>cassandra-unit</artifactId>
-	    <version>1.1.1.2</version>
+	  <!--  <version>1.1.1.2</version> --> 
+      <version>1.2.0.1</version>
     </dependency>
 
     <dependency>
