--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -19,13 +19,13 @@
     <!-- see: ers-transactional-locking-zookeeper parameter -->
   	<context-param> 
  		<param-name>zookeeper-hosts</param-name>
-  		<param-value>134.21.73.204:2181,134.21.73.206:2181,134.21.73.208:2182</param-value>  
+  		<param-value>134.21.73.204:2181,134.21.73.206:2181,134.21.73.208:2181</param-value>  -->
 	</context-param>
 
 	<!-- NOTE: just one of the two following parameters can be set true !! not both in the same time -->
 	<context-param>	
 		<param-name>start-embedded</param-name> 
-		<param-value>yes</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
+		<param-value>no</param-value>  <!-- possible values: yes,no; if 'yes', the replication is set to 1 -->
 	</context-param>
 	<context-param>	
 		<param-name>run-on-openshift</param-name> 
@@ -73,13 +73,13 @@
    <!-- if not set, default value is 0 -->
    <context-param> 
       <param-name>ers-transactional-locking-zookeeper</param-name>
-      <param-value>0</param-value>
+      <param-value>1</param-value>
    </context-param>
 
    <!-- set this to 1 if you want to use MVCC transactional support -->
    <context-param>
       <param-name>ers-transactional-mvcc</param-name> 
-      <param-value>1</param-value>
+      <param-value>0</param-value>
    </context-param>
 
    <!-- set this to 1 if you want to use Check My Writes consistency level -->
